Project

General

Profile

Actions

Bug #48403

closed

mds: fix recall defaults based on feedback from production clusters

Added by Patrick Donnelly over 3 years ago. Updated almost 3 years ago.

Status:
Resolved
Priority:
High
Category:
-
Target version:
% Done:

0%

Source:
Community (user)
Tags:
Backport:
octopus,nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

They are too low and often cause the MDS to OOM.


Related issues 2 (0 open2 closed)

Copied to CephFS - Backport #48878: octopus: mds: fix recall defaults based on feedback from production clustersResolvedNathan CutlerActions
Copied to CephFS - Backport #48879: nautilus: mds: fix recall defaults based on feedback from production clustersResolvedNathan CutlerActions
Actions #1

Updated by Patrick Donnelly over 3 years ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 38574
Actions #2

Updated by Patrick Donnelly over 3 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Backport Bot over 3 years ago

  • Copied to Backport #48878: octopus: mds: fix recall defaults based on feedback from production clusters added
Actions #4

Updated by Backport Bot over 3 years ago

  • Copied to Backport #48879: nautilus: mds: fix recall defaults based on feedback from production clusters added
Actions #5

Updated by Loïc Dachary almost 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF