mds: update defaults for recall configs

This is based on informal experience reportings from production
clusters.

Fixes: https://tracker.ceph.com/issues/48403
Signed-off-by: Patrick Donnelly <pdonnell@redhat.com>
(cherry picked from commit 8df2388b9fb66e1606f47c095ecf0b5c71a1941e)

Conflicts:
	src/common/options.cc
- nautilus does not have FLAG_RUNTIME